[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/singletons/PlayerCamera/PlayerCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player/PlayerFrames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://src/main/SpecificNodes/SpritesWithFlash/Animated/AnimatedSpriteFlash.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://src/main/StateMachine/State.gd" type="Script" id=6]
[ext_resource path="res://src/main/BaseResources/HitPoints/HitPoints.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/SpecificNodes/DamageDetector/DamageDetector.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Player/WeaponController/PlayerWeaponController.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 9 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2147483648
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -27 )
frames = ExtResource( 3 )

[node name="WeaponController" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 1 )

[node name="CameraRig" parent="." instance=ExtResource( 2 )]

[node name="DamageDetector" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -24 )
collision_layer = 2147483649
collision_mask = 48

[node name="HitPoints" parent="." instance=ExtResource( 7 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Inactive")

[node name="Inactive" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Dash" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Stunlock" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
[connection signal="get_damage" from="DamageDetector" to="." method="_on_DamageDetector_get_damage"]
[connection signal="value_decreased" from="HitPoints" to="." method="_on_HitPoints_value_decreased"]
[connection signal="value_zero" from="HitPoints" to="." method="_on_HitPoints_value_zero"]
